# EdgeCast

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  claude.md  fly.toml  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: train-blend.yml
api/: index.py  requirements.txt
docs/: deploy.md
fixtures/: scenarios_sample.json
scripts/: make_gbm_parity_fixture.py  train_blend.py
src/edgecast/: __init__.py  cli.py  conditions.py  consensus.py  db.py  edge.py  forecast.py  grade.py  jsonio.py  market.py  model_store.py  pipeline.py  server.py  settlement.py  snapshot.py  store.py  types.py  verify.py
tests/: test_artifact_store.py  test_blend_dataset.py  test_blend_features.py  test_blend_validate.py  test_cli.py  test_conditions.py  test_consensus.py  test_db.py  test_edge.py  test_end_to_end.py  test_forecast.py  test_gbm.py  test_grade.py  test_jsonio.py  test_live_acis.py  test_live_assemble.py  test_live_integration.py  test_live_kalshi.py  test_live_openmeteo.py  test_live_previous_runs.py  test_market.py  test_model_store.py  test_package.py  test_pipeline.py  test_server.py  test_settlement.py  test_snapshot.py  test_store.py  test_train_blend.py  test_verify.py
tests/fixtures_live/: acis_stndata.json  kalshi_markets.json  openmeteo_ensemble.json  openmeteo_previous_runs.json
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  format.test.ts  format.ts  theme.css  theme.ts  (+1 more)
(+58 files in other folders)
