[project]
name = "edgecast"
version = "0.1.0"
description = "Weather prediction-market intelligence: compares market-implied and model-implied probabilities and verifies them against observations"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
edgecast = "edgecast.cli:main"

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27"]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "fastapi>=0.115", "uvicorn>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgecast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
